# 3LLM-debating-system

./: .env.example  .gitignore  CLAUDE.md  PLAN.md  README.md  pyproject.toml
.claude/: settings.json
.claude/skills/: aging-research.json
config/: settings.yaml  watchlist.yaml
config/prompts/: admet.xml  experiment.xml  pathogenesis.xml  target_discovery.xml
scripts/: run_pipeline.py  skill_runner.py
skills/: aging-research.md
src/: __init__.py
src/admet/: __init__.py  deepchem_predictor.py
src/agents/: __init__.py  pathogenesis_agent.py
src/api/: __init__.py  dependencies.py  main.py  models.py
src/api/routes/: __init__.py  admet.py  debate.py  pipeline.py  rag.py
src/chains/: __init__.py  debate_engine.py  langgraph_orchestrator.py
src/core/: __init__.py  evidence.py  router.py  schema.py
src/genomics/: __init__.py  janggu_predictor.py
src/monitoring/: __init__.py  cost_tracker.py  logger.py  metrics.py
src/rag/: __init__.py  document_loaders.py  embeddings.py  knowledge_base.py  retriever.py
tests/: test_admet_integration.py  test_end_to_end.py  test_orchestrator_integration.py  test_rag_integration.py  test_routing.py  test_schema.py
